# eeg-networks-pytorch

./: .gitignore  .i18nrc.json  README-cn.md  README.en_US.md  README.md  README.zh-CN.md  dataset.py  eeg.py  eeg_inception.py  main.py  predict.py  pyproject.toml  requirements.txt  setup.py  train.py  utils.py  val.py
.github/workflows/: python-publish.yml
eeg_networks/: __init__.py  dataset.py
eeg_networks/nets/: __init__.py  eeg_inception.py  eeg_lstm.py  lstm.py
locales/: en_US.json  zh_CN.json
nets/: __init__.py  eeg_inception.py  rnn.py
